--- a/code/aim1_dea.Rmd
+++ b/code/aim1_dea.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Aim 1 - Differential Expression Analysis"
+output:
+html_notebook: default
 ---
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-renv::restore()
+# renv::restore()
 
 library(GEOquery)
 library(limma)
@@ -16,6 +17,65 @@ library(annotate)
 library(RColorBrewer)
 library(hgu133plus2.db)
 library(hgu133plus2cdf)
+
+if (!dir.exists('../data/diff_exp_output')) {
+  dir.create('../data/diff_exp_output')
+}
+```
+
+# DEA Functions
+```{r}
+run_diffexp_analysis <- function(expr_data, design_matrix, probe_to_gene, save=T, out_dir=NA, dataset_name=NA) {
+  # get top differentially expressed genes
+  fit <- lmFit(expr_data, design_matrix)
+  fit_ebayes <- eBayes(fit)
+  diffexp_df <- topTable(fit_ebayes, sort.by='logFC', number=Inf) |>
+    rownames_to_column(var='probe_id') |>
+    inner_join(probe_to_gene, by=c('probe_id'))
+  
+  out_fname <- paste(dataset_name, '.csv', sep='')
+  if (save) write.csv(diffexp_df, paste(out_dir, out_fname, sep=''))
+  
+  return (diffexp_df)
+}
+
+filter_diffexp_results <- function(diffexp_df, fc_thresh, p_thresh, save=T, out_dir=NA, dataset_name=NA) {
+  # filter down to genes with log FC and p-value above/below thresholds
+  diffexp_filt_df <- diffexp_df |>
+    filter((abs(logFC) > fc_thresh & adj.P.Val < p_thresh))
+  
+  out_fname_suffix <- sprintf('fc-%.2f_p-%.2f.csv', fc_thresh, p_thresh)
+  out_fname <- paste(dataset_name, out_fname_suffix, sep='_')
+  if (save) write.csv(diffexp_filt_df, paste(out_dir, out_fname, sep=''))
+  
+  return (diffexp_filt_df)
+}
+
+get_top_gene_names <- function(diffexp_df, fc_thresh, p_thresh, n=150, direction='upreg', 
+                               save=T, out_dir=NA, dataset_name=NA) {
+  diffexp_filt_df <- filter_diffexp_results(diffexp_df, fc_thresh, p_thresh, save=F) 
+  
+  if (direction == 'upreg') {
+    top_gene_names <- diffexp_filt_df |>
+      filter(logFC > 0) |>
+      slice_max(logFC, n=n) |>
+      dplyr::select(gene_symbol)
+  } else {
+    top_gene_names <- diffexp_filt_df |>
+      filter(logFC < 0) |>
+      slice_min(logFC, n=n) |>
+      dplyr::select(gene_symbol)
+  }
+  out_fname_suffix <- sprintf('fc-%.2f_p-%.2f_%s-%d.csv', fc_thresh, p_thresh, direction, n)
+  out_fname <- paste(dataset_name, out_fname_suffix, sep='_')
+  write.table(top_gene_names, 
+              paste(out_dir, out_fname, sep=''),
+              row.names=FALSE,
+              col.names=FALSE,
+              quote=FALSE)
+  
+  return(top_gene_names)
+}
 ```
 
 # GSE141549 (Gabriel) DEA
@@ -32,7 +92,7 @@ gabriel_geo_plat2[['disease stage:ch1']] <- as.integer(gabriel_geo_plat2[['disea
 # for some reason, the above load doesn't include expression data,
 # so have to manually download from NCI website 
 # downloaded from here https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE141549
-gabriel_expr_data <- read_excel('data/GSE141549_batchCorrectednormalizedArrayscombined.xlsx')
+gabriel_expr_data <- read_excel('../data/diff_exp_input/GSE141549_batchCorrectednormalizedArrayscombined.xlsx')
 ```
 
 ```{r}
@@ -49,8 +109,11 @@ gabriel_design <- model.matrix( ~gabriel_lbls[['disease stage:ch1']])
 gabriel_expr_data_input <- gabriel_expr_data |> 
   column_to_rownames(var="Probe_Id") |>
   dplyr::select(gabriel_lbls$title)
-```
 
+gabriel_probe_to_gene <- gabriel_expr_data |>
+  dplyr::select(Probe_Id, Gene_symbol) |>
+  dplyr::rename(gene_symbol = Gene_symbol, probe_id = Probe_Id) 
+```
 
 ```{r}
 # hierarchically cluster expression data to see if there's normal/disease separation
@@ -66,38 +129,27 @@ pheatmap(gabriel_dists_mat,
 ```
 
 ```{r}
-# get top differentially expressed genes
-gabriel_fit <- lmFit(gabriel_expr_data_input, gabriel_design)
-gabriel_fit_ebayes <- eBayes(gabriel_fit)
-gabriel_top <- topTable(gabriel_fit_ebayes, sort.by='logFC', number=Inf)
+# run differential expression analysis on GSE141549
+gabriel_diffexp_df <- run_diffexp_analysis(gabriel_expr_data_input, gabriel_design, gabriel_probe_to_gene,
+                                           out_dir='../data/diff_exp_output/', dataset_name='GSE141549')
+gabriel_diffexp_filt_df <- filter_diffexp_results(gabriel_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='GSE141549')
+gabriel_top150_ureg_genes <- get_top_gene_names(gabriel_diffexp_df, fc_thresh=0.5, p_thresh=0.05, direction='upreg', n=150,
+                                                out_dir='../data/diff_exp_output/', dataset_name='GSE141549')
+gabriel_top150_dreg_genes <- get_top_gene_names(gabriel_diffexp_df, fc_thresh=0.5, p_thresh=0.05, direction='downreg', n=150,
+                                                out_dir='../data/diff_exp_output/', dataset_name='GSE141549')
 
-gabriel_probe_to_gene <- gabriel_expr_data |>
-  dplyr::select(Probe_Id, Gene_symbol) |>
-  dplyr::rename(gene_symbol = Gene_symbol, probe_id = Probe_Id) 
-
-gabriel_top_genes <- gabriel_top |>
-  rownames_to_column(var='probe_id') |>
-  inner_join(gabriel_probe_to_gene, by=c('probe_id'))
-
-gabriel_top_genes_filt <- gabriel_top_genes |>
-  filter((abs(logFC) > 1.1 & adj.P.Val < 0.05))
-
-if (!dir.exists('res')) {
-  dir.create('res')
-}
-
-write.csv(gabriel_top_genes, 'res/GSE141549_all_genes.csv')
-write.csv(gabriel_top_genes_filt, 'res/GSE141549_top_genes.csv')
 ```
 
 # GSE51981 (Tamaresis) DEA
 
 ```{r}
-# load preprocessed data from GEO (just to get phenotype labels)
+# load preprocessed data from GEO 
 tamaresis_geo <- getGEO('GSE51981')
 tamaresis_geo_plat1 <- tamaresis_geo[[1]]
 tamaresis_geo_plat1[["endometriosis/no endometriosis:ch1"]] <-
   as.integer(tamaresis_geo_plat1[["endometriosis/no endometriosis:ch1"]] == "Endometriosis")
+
 ```
 
 ```{r}
@@ -108,13 +160,18 @@ tamaresis_lbls <- pData(tamaresis_geo_plat1) |>
 tamaresis_design <- model.matrix( ~tamaresis_lbls[['endometriosis/no endometriosis:ch1']])
 
 # extract expression data
-tamaresis_expr_data_df <- as.data.frame(exprs(tamaresis_geo_plat1)) |>
+tamaresis_expr_data_input <- as.data.frame(exprs(tamaresis_geo_plat1)) |>
   dplyr::select(tamaresis_lbls$geo_accession)
+
+tamaresis_probe_to_gene <- select(hgu133plus2.db, 
+                                  rownames(tamaresis_expr_data_input), 
+                                  c('SYMBOL')) |> 
+  dplyr::rename(gene_symbol = SYMBOL, probe_id = PROBEID)
 ```
 
 ```{r}
 # hierarchically cluster expression data to see if there's normal/disease separation
-tamaresis_dists <- dist(t(tamaresis_expr_data_df))
+tamaresis_dists <- dist(t(tamaresis_expr_data_input))
 tamaresis_dists_mat <- as.matrix(tamaresis_dists)
 colors <- colorRampPalette(rev(brewer.pal(9, "Blues")) )(255)
 
@@ -139,66 +196,40 @@ pheatmap(tamaresis_dists_mat,
 
 
 ```{r}
-# get top differentially expressed genes
-tamaresis_fit <- lmFit(tamaresis_expr_data_df, tamaresis_design)
-tamaresis_fit_ebayes <- eBayes(tamaresis_fit)
-tamaresis_top <- topTable(tamaresis_fit_ebayes, sort.by='logFC', number=Inf)
-
-tamaresis_probe_to_gene <- select(hgu133plus2.db, 
-                                  rownames(tamaresis_top), 
-                                  c('SYMBOL')) |> 
-  dplyr::rename(gene_symbol = SYMBOL)
-  
-tamaresis_top_genes <- tamaresis_top |>
-  rownames_to_column(var='probe_id') |>
-  inner_join(tamaresis_probe_to_gene, by=c('probe_id' = 'PROBEID'))
-
-tamaresis_top_genes_filt <- tamaresis_top_genes |>
-  filter((abs(logFC) > 1.1 & adj.P.Val < 0.05))
-
-if (!dir.exists('res')) {
-  dir.create('res')
-}
-
-write.csv(tamaresis_top_genes, 'res/GSE51981_all_genes.csv')
-write.csv(tamaresis_top_genes_filt, 'res/GSE51981_top_genes.csv')
+# run differential expression analysis on GSE141549
+tamaresis_diffexp_df <- run_diffexp_analysis(tamaresis_expr_data_input, tamaresis_design, tamaresis_probe_to_gene,
+                                           out_dir='../data/diff_exp_output/', dataset_name='GSE51981')
+tamaresis_diffexp_filt_df <- filter_diffexp_results(tamaresis_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='GSE51981')
+tamaresis_top150_ureg_genes <- get_top_gene_names(tamaresis_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  direction='upreg', n=150,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='GSE51981')
+tamaresis_top150_dreg_genes <- get_top_gene_names(tamaresis_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  direction='downreg', n=150,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='GSE51981')
 ```
 
 # Sanity Checking
 ```{r}
 # load top genes from Oskotsky paper to sanity check
-oskotsky_top_genes <- read_excel('data/oskotsky.xlsx', sheet="DvC_unstratified")
-oskotsky_top_genes_filt <- oskotsky_top_genes |>
-  filter((abs(`logFC (Control/Disease)`) > 1.1 & adj.P.Val < 0.05))
+oskotsky_diffexp_df <- as.data.frame(read_excel('../data/diff_exp_input/oskotsky.xlsx', sheet="DvC_unstratified")) |>
+  mutate(logFC = -`logFC (Control/Disease)`)
+
+oskotsky_top150_ureg_genes <- get_top_gene_names(oskotsky_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  direction='upreg', n=150,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='oskotsky')
+oskotsky_top150_dreg_genes <- get_top_gene_names(tamaresis_diffexp_df, fc_thresh=0.5, p_thresh=0.05,
+                                                  direction='downreg', n=150,
+                                                  out_dir='../data/diff_exp_output/', dataset_name='oskotsky')
 ```
 
 ```{r}
-length(intersect(gabriel_top_genes$gene_symbol, oskotsky_top_genes_filt$gene_symbol))
-length(intersect(tamaresis_top_genes$gene_symbol, oskotsky_top_genes_filt$gene_symbol))
-length(intersect(tamaresis_top_genes$gene_symbol, gabriel_top_genes$gene_symbol))
-```
+length(intersect(gabriel_top150_ureg_genes$gene_symbol, oskotsky_top150_ureg_genes$gene_symbol))
+length(intersect(tamaresis_top150_ureg_genes$gene_symbol, oskotsky_top150_ureg_genes$gene_symbol))
+length(intersect(gabriel_top150_ureg_genes$gene_symbol, tamaresis_top150_ureg_genes$gene_symbol))
 
-# GSE51981 (Tamaresis) DEA raw data load
-```{r}
-# load raw CEL files
-# if (!dir.exists('data/GSE51981')) {
-#   untar('data/GSE51981_RAW.tar', exdir='data/GSE51981')
-# }
-
-# read and process data
-# tamaresis_celdata <- ReadAffy(filenames = list.celfiles('data/GSE51981', full.names=TRUE),
-#                               cdfname='hgu133plus2cdf')
-# tamaresis_proc_expr_data <- affy::rma(tamaresis_celdata)
-
-# reorder columns of expression data to match labels
-
-
-# reorder columns of expression data to match labels
-# tamaresis_expr_data_df <- as.data.frame(exprs(tamaresis_proc_expr_data))
-# colnames(tamaresis_expr_data_df) <- sub("_\\d+\\.CEL\\.gz", "", 
-#                                         colnames(as.data.frame(exprs(tamaresis_proc_expr_data))),
-#                                         ignore.case = TRUE)
-# tamaresis_expr_data_df <- tamaresis_expr_data_df |>
-#   dplyr::select(tamaresis_lbls$geo_accession)
+length(intersect(gabriel_top150_dreg_genes$gene_symbol, oskotsky_top150_dreg_genes$gene_symbol))
+length(intersect(tamaresis_top150_dreg_genes$gene_symbol, oskotsky_top150_dreg_genes$gene_symbol))
+length(intersect(gabriel_top150_dreg_genes$gene_symbol, tamaresis_top150_dreg_genes$gene_symbol))
 ```
 
