--- a/code/aim2_make_rnk_files.Rmd
+++ b/code/aim2_make_rnk_files.Rmd
@@ -11,8 +11,7 @@ library(tidyverse)
 
 ```{r}
 # Read in diff exp output
-# assumes a data/diff_exp_output folder 
-
+# assumes a data/diff_exp_output folder containing output of differential expression analysis
 gse_files <- list.files(path=here("data/diff_exp_output"), 
                         pattern="*fc-0.50_p-0.05.csv",
                         full.names=TRUE)
@@ -27,14 +26,14 @@ for (f in gse_files) {
     group_by(gene_symbol) %>% # need one value per gene symbol and unclear which illumina probe is better
     summarise(mean_logFC = mean(logFC)) %>%
     write_tsv(paste(here("data/rnk_files"),
-                  paste(f_name, "upreg.rnk", sep="_"), 
+                  paste(f_name, "_fc0pt5_up.rnk", sep="_"), 
                   sep="/"),
               col_names = FALSE) # needs to be tab-delimited no header
   df <- read_csv(f) %>% 
     group_by(gene_symbol) %>% # need one value per gene symbol and unclear which illumina probe is better
     summarise(mean_logFC = mean(logFC)) %>%
     write_tsv(paste(here("data/rnk_files"),
-                  paste(f_name, ".rnk", sep=""), 
+                  paste(f_name, "_fc0pt5.rnk", sep=""), 
                   sep="/"),
               col_names = FALSE) # needs to be tab-delimited no header
 }
